--- a/src/app/spots/form.css
+++ b/src/app/spots/form.css
@@ -1,25 +1,33 @@
+.sebm-google-map-container {
+  height: 268px;
+  top: 0;
+  color: #444;
+}
 h2 {
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 40px;
-		color: #eee;
-    border: 4px solid #333;
-    padding: 30px 10px;
-		text-align: center;
-		width: auto;
-		background: #404040;
-		margin-top: 0;
-		margin-bottom: 0;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 40px;
+  color: #eee;
+  border: 4px solid #333;
+  padding: 30px 10px;
+  text-align: center;
+  width: auto;
+  background: #404040;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 h4 {
 	color: #fff;
 }
 .btn {
+  width: 48%;
+}
+.btn.btn-dark {
   width: 200px;
 }
 form {
     padding: 70px 50px;
-		background: url('/sportenjoy/assets/images/c4.jpg') top center no-repeat;
+		background: url('/sportenjoy/assets/images/c4.jpg') top center no-repeat #2ecc71;
 		background-size:cover;
 		color: #32353c;
 }
@@ -56,8 +64,8 @@ form {
   background: #f5f5f5;
 }
 form .section img {
-  max-height: 400px;
-  max-width: 400px;
+  max-height: 150px;
+  max-width: 150px;
   color: #fff;
   text-align: center;
   line-height: 200px;
@@ -87,5 +95,8 @@ form .section img {
 	}
   .file-input {
     width: 48%;
+  }
+  p {
+    margin-top: 15px;
   }
 }
