--- a/src/app/shared/spotters-join/spotters-join.directive.html
+++ b/src/app/shared/spotters-join/spotters-join.directive.html
@@ -5,17 +5,17 @@
     <div class="container dotted hidden-xs hidden-sm">
         <div class="row">
             <div class="col-md-3 col-xs-3">
-                <img src="/sportenjoy/assets/images/signup-icon.png" />
+                <img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/signup-icon.png" />
                 <span>{{ 'SPOTTERS_JOIN.SIGN_UP' | translate }}</span>
             </div>
-            <img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
+            <img class="arrow col-md-1 col-xs-1" src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/arrow.png" />
             <div class="col-md-3 col-xs-3">
-                <img src="/sportenjoy/assets/images/find-icon.png" />
+                <img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/find-icon.png" />
                 <span>{{ 'SPOTTERS_JOIN.DISCOVER' | translate }}</span>
             </div>
-            <img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
+            <img class="arrow col-md-1 col-xs-1" src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/arrow.png" />
             <div class="col-md-3 col-xs-3">
-                <img src="/sportenjoy/assets/images/spot-icon.png" />
+                <img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/spot-icon.png" />
                 <span>{{ 'SPOTTERS_JOIN.SHARE' | translate }}</span>
             </div>
         </div>
