Minor cosmetic changes

--- a/src/app/spots/form.css
+++ b/src/app/spots/form.css
@@ -27,7 +27,7 @@ h4 {
 }
 form {
     padding: 70px 50px;
-		background: url('/sportenjoy/assets/images/c4.jpg') top center no-repeat #2ecc71;
+		background: top center no-repeat #2ecc71;
 		background-size:cover;
 		color: #32353c;
 }
