--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,13 +3,13 @@
 		<h2>{{ 'OTHER.OR' | translate }}</h2>
 	</div>
 	<div class="row">
-		<div class="col-md-4 col-sm-4 login-item" id="fb">
+		<div class="col-md-4 col-sm-4 login-item" id="fb" (click)="onFacebookLoginClick()">
 			<div class="row">
 				<div class="hidden-xs logo">
-					<img src="/sportenjoy/assets/images/facebook-logo.png" />
+					<img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/facebook-logo.png" />
 				</div>
 				<div class="col-xs-4 visible-xs thumb">
-					<img src="/sportenjoy/assets/images/facebook-logo.png" width="80px"/>
+					<img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/facebook-logo.png" width="80px"/>
 				</div>
 				<div class="col-xs-8 col-sm-12">
 					<h4>{{ 'LOGIN.LOGIN_WITH' | translate }} Facebook</h4>
@@ -19,10 +19,10 @@
 		<div class="col-md-4 col-sm-4 login-item" id="google">
 			<div class="row">
 				<div class="hidden-xs logo">
-					<img src="/sportenjoy/assets/images/google-plus-logo.png" />
+					<img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/google-plus-logo.png" />
 				</div>
 				<div class="col-xs-4 visible-xs thumb">
-					<img src="/sportenjoy/assets/images/google-plus-logo.png" width="80px"/>
+					<img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/google-plus-logo.png" width="80px"/>
 				</div>
 				<div class="col-xs-8 col-sm-12">
 					<h4>{{ 'LOGIN.LOGIN_WITH' | translate }} Google+</h4>
@@ -32,10 +32,10 @@
 		<div class="col-md-4 col-sm-4 login-item">
 			<div class="row">
 				<div class="hidden-xs logo">
-					<img src="/sportenjoy/assets/images/login-logo.png" />
+					<img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/login-logo.png" />
 				</div>
 				<div class="col-xs-4 visible-xs thumb">
-					<img src="/sportenjoy/assets/images/login-logo.png" width="80px"/>
+					<img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/login-logo.png" width="80px"/>
 				</div>
 				<div class="col-xs-8 col-sm-12">
 					<h4>{{ 'LOGIN.FORGOT_PASSWORD' | translate }}</h4>
